--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div id="container">
+		<span id="first">Before Element </span>anThis is the main container element  <span id="last">After Element</span></div>
 
 </body>
 
